[project]
name = "comfyui-image-matting"
description = "This set of nodes allow to improve the quality of the image mask by applying matting"
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = ["opencv-contrib-python>=4.7.0.72", "opencv-contrib-python-headless>=4.7.0.72", "opencv-python>=4.7.0.72", "opencv-python-headless>=4.7.0.72", "transformers"]

[project.urls]
Repository = "https://github.com/Aperolka-AI/ComfyUI-Image-Matting"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Aperolka-AI"
DisplayName = "ComfyUI-Image-Matting"
Icon = ""
