[project]
version = "1.0.0"
name = "comfyui-image-matting"
license = { file = "LICENSE" }
description = "A ComfyUI extension for image matting using pretrained AI models. This extension allows you to extract precise foreground objects from images by leveraging trimaps that guide the matting process."
dependencies = ["opencv-contrib-python>=4.7.0.72", "opencv-contrib-python-headless>=4.7.0.72", "opencv-python>=4.7.0.72", "opencv-python-headless>=4.7.0.72", "transformers"]

[project.urls]
Repository = "https://github.com/Aperolka-AI/ComfyUI-Image-Matting"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
DisplayName = "ComfyUI-Image-Matting"
PublisherId = "aperolka-ai"
Icon = ""
